force-app/main/default/objects/ObdACP__e.object
<CustomObject>
    <description>Outbound ACP event which will be published on update of Callista_Unique_Key_ADM__c on ACP</description>
    <fields>
        <fullName>CRM_Updates_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag indicating if transfer job has run for the Applicant and ACP is ready for any updates from the Client which can then be passed on to Callista successfully.</description>
        <label>CRM Updates Ready?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Response_Message__c</fullName>
        <description>Response details from the integration destination</description>
        <label>Workflow Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status to indicate outcome of Transfer Job/ACP updates</description>
        <label>Workflow Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Type__c</fullName>
        <description>Field to indicate whether it is for Transfer Job/ACP update</description>
        <label>Workflow Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crmApplicantId__c</fullName>
        <description>Reference field which is sent back in the response to the client. This field is sent with the Platform event to identify the contact on the client&apos;s side.</description>
        <label>crmApplicantId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crmApplicationId__c</fullName>
        <description>CRM Application id(name) to tie CRM and OES</description>
        <label>crmApplicationId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>externalReferenceId__c</fullName>
        <description>Reference field which is sent back in the response.to the client. This field is sent with the Platform event to identify the Application on the client&apos;s side.</description>
        <label>externalReferenceId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ObdACP</label>
    <pluralLabel>ObdACP</pluralLabel>
</CustomObject>